styles/styles.css
:root {
    --heading-color: #222222;
    --light-font: #000000;
    --dark-font: #ffffff;
    --clickable-color: #656565;
    --background-color: #D9D9D9;
    --placeholder-color: #AAAAAA;
}

* {
    font-family: 'Roboto', sans-serif;
    padding: 10px;
}

.logo-container {
    display: flex;
    align-items: center;
    justify-content: left;

    width: 100%;
}

.logo {
    width: 2em;
    height: 2em;
}

h1 {
    margin: 0;
}

nav {
    display: flex;
    flex-direction: row;

    padding: 0;

    background-color: var(--heading-color);
    color: var(--dark-font);
}

nav a {
    color: var(--dark-font);
    text-decoration: none;
}

nav a:hover {
    background-color: var(--clickable-color);
}

main {
    display: flex;
    flex-direction: column;
}

.student-info {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 20px;

    width: 100%;
}

.student-info section {
    width: 100%;
}

.about-me {
    flex: 2;
}

.student-photo {
    flex: 1;
}

.student-photo div {
    position: relative;

    margin: 10px;
    padding: 0;

    height: 100%;
    aspect-ratio: 1 / 1;

    background-color: var(--placeholder-color);
}

.student-photo img {
    position: relative;
    top: 0;
    left: 0;

    width: 100%;
    height: 100%;
    padding: 0;

    object-fit: cover;
}

section {
    display: flex;
    flex-direction: column;

    margin: 20px 0;
    padding: 0;

    background-color: var(--background-color);
}

section h2 {
    margin: 0;

    text-align: center;

    background-color: var(--heading-color);
    color: var(--dark-font);
}

.web-courses {
    background-color: transparent;
}

.filter-buttons {
    display: flex;
    justify-content: center;
}

.filter-buttons button {
    width: 100%;
}

.socials {
    display: block;

    text-align: center;
    background-color: transparent;
}

.social-icon img {
    width: 5em;
    transition: transform 0.3s ease-in-out;
}

.social-icon img:hover{
    transform: scale(1.5);
}

footer {
    text-align: center;
    font-style: italic;
}

